<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/flContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/str_motionverse"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:padding="5dp"
            android:src="@mipmap/icon_setting" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/answerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout">

        <TextView
            android:id="@+id/tv0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:text="@string/str_you_can_ask_questions"
            android:textColor="#1989FA"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tvPlatform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv0"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_tv_bg"
            android:paddingStart="8dp"
            android:paddingTop="3dp"
            android:paddingEnd="8dp"
            android:paddingBottom="3dp"
            android:text="@string/str_intro_platform"
            android:textColor="#1989FA"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvTechnology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv0"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/tvPlatform"
            android:background="@drawable/shape_tv_bg"
            android:paddingStart="8dp"
            android:paddingTop="3dp"
            android:paddingEnd="8dp"
            android:paddingBottom="3dp"
            android:text="@string/str_intro_technology"
            android:textColor="#1989FA"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv0"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/tvTechnology"
            android:background="@drawable/shape_tv_bg"
            android:paddingStart="8dp"
            android:paddingTop="3dp"
            android:paddingEnd="8dp"
            android:paddingBottom="3dp"
            android:text="@string/str_intro_business"
            android:textColor="#1989FA"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F8F8"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/ivKeyBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/icon_keyboard"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/icon_yuyin" />

        <EditText
            android:id="@+id/edtBottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/shape_edt_bg"
            android:hint="@string/str_input_broadcast"
            android:inputType="text"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <com.app.testwebviewforlink.audio.VoiceButton
            android:id="@+id/tvBottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_tv_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/str_long_press_speak"
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/selector_btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:text="@string/str_send"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>